# rag-pipeline-chatbot

./: .gitignore  Dockerfile  README.md  chainlit.md  pipeline.yaml  pyproject.toml
.chainlit/: config.toml
.github/workflows/: etl.yml
data/faiss/: my_faiss
src/app/: app.py  goldbot_agent.py
src/app/goldNews/: __init__.py  news.py  newsnode.py  newstool.py
src/app/goldPrices/: __init__.py  prices.py  pricesnode.py  pricestool.py  sql_retriever.py
src/etl/: get_data.py  gold_news_etl.py  gold_prices_etl.py  historic_prices_data.py  historic_prices_data_etl.py
src/exploratory/: __init__.py  goldbot.py  goldbot_agent.py  haystackTest.ipynb  news.ipynb  news_node.ipynb  sql_node.ipynb  sql_node.py  sql_query_generator.ipynb  sql_query_generator.py
src/exploratory/agent/: goldbot_agent.py
src/exploratory/goldNews/: newstool.py
src/exploratory/goldPrices/: prices.py  pricesnode.py  pricestool.py
src/exploratory/news/: news.py  news_node.ipynb  news_node.py  news_node_bm25Test.ipynb  news_tool.py
src/exploratory/prices/: prices.py  prices_tool.py
src/exploratory/sql/: sql.py  sql_node.ipynb  sql_node.py  sql_tool.py
src/exploratory/utils/: sql_query_generator.py
src/visualization/: visualization.py
